// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Feature Index page A11y I can see the skip to content link 1`] = `"مواد پر جائیں"`;

exports[`AMP Feature Index page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Feature Index page AMP Geo config 1`] = `
Object {
  "AmpBind": true,
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Feature Index page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=95&p=urdu.science.feature_index.51314202.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Acps%3A8c1f4760-de67-744b-bfd2-16eb1e9fd644]&x2=[amp]&x3=[news-urdu]&x4=[ur]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[index-section]&x8=[simorgh]&x9=[%DA%A9%D9%88%D8%B1%D9%88%D9%86%D8%A7%2B%D9%88%D8%A7%D8%A6%D8%B1%D8%B3%3A%2B%D8%AA%D8%AD%D9%82%DB%8C%D9%82%D8%8C%2B%D8%AA%D8%B4%D8%AE%DB%8C%D8%B5%2B%D8%A7%D9%88%D8%B1%2B%D8%A7%D8%AD%D8%AA%DB%8C%D8%A7%D8%B7%2B-%2BBBC%2BNews%2B%D8%A7%D8%B1%D8%AF%D9%88]&x11=[2020-01-31T08%3A48%3A32.000Z]&x12=[2020-09-29T10%3A13%3A59.000Z]&ref=\${documentReferrer}",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP Feature Index page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "FIX",
    "domain": "test.bbc.co.uk",
    "sections": "Urdu, Urdu - FIX",
    "title": "کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP Feature Index page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News, اردو",
  "url": "/urdu",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 2`] = `
Object {
  "text": "جانیے کہ آپ بی بی سی پر کیوں اعتماد کر سکتے ہیں",
  "url": "https://www.bbc.com/urdu/institutional-49282935",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 3`] = `
Object {
  "text": "استعمال کے ضوابط",
  "url": "https://www.bbc.com/urdu/institutional-37588278",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 4`] = `
Object {
  "text": "بی بی سی کے بارے میں",
  "url": "https://www.bbc.com/urdu/institutional-37588280",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 5`] = `
Object {
  "text": "پرائیویسی پالیسی",
  "url": "https://www.bbc.com/urdu/institutional-37588282",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 6`] = `
Object {
  "text": "کوکیز",
  "url": "https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 7`] = `
Object {
  "text": "بی بی سی سے رابطہ کریں",
  "url": "https://www.bbc.co.uk/urdu/send/u50853907",
}
`;

exports[`AMP Feature Index page Footer Anchors should match text and url 8`] = `
Object {
  "text": "بیرونی لنکس کے بارے میں ہماری پالیسی.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Feature Index page Footer Cookie Settings Button should match text and on handler 1`] = `
Object {
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "AdChoices / Do Not Sell My Info",
}
`;

exports[`AMP Feature Index page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/urdu"`;

exports[`AMP Feature Index page Footer I can see the footer copyright and external linking text 1`] = `"© 2022 بی بی سی. بی بی سی بیرونی ویب سائٹس کے مواد کا ذمہ دار نہیں بیرونی لنکس کے بارے میں ہماری پالیسی."`;

exports[`AMP Feature Index page Header I can see the branding 1`] = `"BBC News, اردو"`;

exports[`AMP Feature Index page Header Navigation link should match text and url 1`] = `
Object {
  "text": "صفحۂ اول",
  "url": "/urdu",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 2`] = `
Object {
  "text": "پاکستان",
  "url": "/urdu/topics/cjgn7n9zzq7t",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 3`] = `
Object {
  "text": "آس پاس",
  "url": "/urdu/topics/cl8l9mveql2t",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 4`] = `
Object {
  "text": "ورلڈ",
  "url": "/urdu/topics/cw57v2pmll9t",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 5`] = `
Object {
  "text": "کھیل",
  "url": "/urdu/topics/c340q0p2585t",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 6`] = `
Object {
  "text": "فن فنکار",
  "url": "/urdu/topics/ckdxnx900n5t",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 7`] = `
Object {
  "text": "سائنس",
  "url": "/urdu/topics/c40379e2ymxt",
}
`;

exports[`AMP Feature Index page Header Navigation link should match text and url 8`] = `
Object {
  "text": "ویڈیو",
  "url": "/urdu/media/video",
}
`;

exports[`AMP Feature Index page Main heading should match text 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط"`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/urdu/images/icons/icon-192x192.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-72x72.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-96x96.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-128x128.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-144x144.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-152x152.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-180x180.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-192x192.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-384x384.png",
}
`;

exports[`AMP Feature Index page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/urdu/images/icons/icon-512x512.png",
}
`;

exports[`AMP Feature Index page SEO Canonical link 1`] = `"http://localhost:7080/urdu/science-51314202"`;

exports[`AMP Feature Index page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP Feature Index page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP Feature Index page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Feature Index page SEO Heading level 1 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط"`;

exports[`AMP Feature Index page SEO Lang attribute 1`] = `"ur"`;

exports[`AMP Feature Index page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "ur",
        "name": "Urdu",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/urdu/science-51314202",
        "@type": "WebPage",
        "name": "کورونا وائرس: تحقیق، تشخیص اور احتیاط",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
          "width": 1024,
        },
        "name": "BBC News اردو",
        "publishingPrinciples": "https://www.bbc.com/urdu/institutional-49282935",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png",
      "url": "http://localhost:7080/urdu/science-51314202",
    },
  ],
}
`;

exports[`AMP Feature Index page SEO OG description 1`] = `"دنیا بھر میں کورونا وائرس سے متاثرہ افراد کی تعداد 25 لاکھ سے تجاوز کر گئی ہے اور دو لاکھ کے قریب اموات ہو چکی ہیں۔ دیکھیے اس وائرس کے بارے میں بی بی سی کی کوریج۔"`;

exports[`AMP Feature Index page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`AMP Feature Index page SEO OG image alt 1`] = `"BBC News اردو"`;

exports[`AMP Feature Index page SEO OG locale 1`] = `"ur"`;

exports[`AMP Feature Index page SEO OG site name 1`] = `"BBC News اردو"`;

exports[`AMP Feature Index page SEO OG title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`AMP Feature Index page SEO OG type 1`] = `"website"`;

exports[`AMP Feature Index page SEO OG url 1`] = `"http://localhost:7080/urdu/science-51314202"`;

exports[`AMP Feature Index page SEO Page title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`AMP Feature Index page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`AMP Feature Index page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Feature Index page SEO Twitter creator 1`] = `"@bbcurdu"`;

exports[`AMP Feature Index page SEO Twitter description 1`] = `"دنیا بھر میں کورونا وائرس سے متاثرہ افراد کی تعداد 25 لاکھ سے تجاوز کر گئی ہے اور دو لاکھ کے قریب اموات ہو چکی ہیں۔ دیکھیے اس وائرس کے بارے میں بی بی سی کی کوریج۔"`;

exports[`AMP Feature Index page SEO Twitter image alt 1`] = `"BBC News اردو"`;

exports[`AMP Feature Index page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/urdu.png"`;

exports[`AMP Feature Index page SEO Twitter site 1`] = `"@bbcurdu"`;

exports[`AMP Feature Index page SEO Twitter title 1`] = `"کورونا وائرس: تحقیق، تشخیص اور احتیاط - BBC News اردو"`;

exports[`AMP Feature Index page Sections should match headline text 1`] = `"اہم خبریں"`;

exports[`AMP Feature Index page Sections should match headline text 2`] = `"ملٹی میڈیاسب دیکھیں"`;

exports[`AMP Feature Index page Sections should match headline text 3`] = `"فیچر اور تجزیے"`;

exports[`AMP Feature Index page Sections should match headline text 4`] = `"وائرس کی تاریخ"`;

exports[`AMP Feature Index page Story Promo Headline should match text 1`] = `"بل گیٹس کورونا وائرس سے متعلق سازشی نظریات کا مرکز کیسے بنے"`;

exports[`AMP Feature Index page Story Promo Image should match image 1`] = `
<amp-img
  alt="بل گیٹس"
  attribution="AFP/getty images"
  class="bbc-image"
  height="576"
  layout="responsive"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/B04F/production/_112753154_bill.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/B04F/production/_112753154_bill.jpg.webp 660w"
  width="1024"
>
  <amp-img
    alt="بل گیٹس"
    attribution="AFP/getty images"
    class="bbc-image"
    fallback=""
    height="576"
    layout="responsive"
    sizes="(max-width: 600px) 100vw, (max-width: 1008px) 50vw, 496px"
    src="https://ichef.bbci.co.uk/news/660/cpsprodpb/B04F/production/_112753154_bill.jpg"
    srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/B04F/production/_112753154_bill.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/B04F/production/_112753154_bill.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/B04F/production/_112753154_bill.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/B04F/production/_112753154_bill.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/B04F/production/_112753154_bill.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/B04F/production/_112753154_bill.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/B04F/production/_112753154_bill.jpg 660w"
    width="1024"
  />
</amp-img>
`;

exports[`AMP Feature Index page Story Promo Link should match text and url 1`] = `
Object {
  "text": "بل گیٹس کورونا وائرس سے متعلق سازشی نظریات کا مرکز کیسے بنے",
  "url": "/urdu/world-52952106",
}
`;

exports[`AMP Feature Index page Story Promo Timestamp should match text and date 1`] = `
Object {
  "date": "2020-06-07",
  "text": "7 جون 2020",
}
`;
